@@ -17,6 +17,7 @@ import javax.swing.JButton;
 import javax.swing.JCheckBox;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
+import javax.swing.JFormattedTextField;
 import javax.swing.JLabel;
 import javax.swing.JMenu;
 import javax.swing.JMenuBar;
@@ -28,11 +29,13 @@ import javax.swing.JScrollPane;
 import javax.swing.JTabbedPane;
 import javax.swing.JTable;
 import javax.swing.JTextField;
-import javax.swing.JFormattedTextField;
 import javax.swing.table.AbstractTableModel;
 import jmri.DccThrottle;
 import jmri.InstanceManager;
+import jmri.NamedBean;
+import jmri.NamedBeanHandle;
 import jmri.jmrit.picker.PickListModel;
+import jmri.jmrit.roster.RosterSpeedProfile;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -54,8 +57,7 @@ import org.slf4j.LoggerFactory;
  */
 public class WarrantFrame extends WarrantRoute {
 
-    static int ROW_HEIGHT;
-
+    int _rowHeight;
     private Warrant _warrant;
     private Warrant _saveWarrant;
     private ThrottleTableModel _commandModel;
@@ -64,6 +66,7 @@ public class WarrantFrame extends WarrantRoute {
 
     private ArrayList<ThrottleSetting> _throttleCommands = new ArrayList<ThrottleSetting>();
     private long _startTime;
+    private float _speed;
     private long _TTP = 0;
     private boolean _forward = true;
     LearnThrottleFrame _learnThrottle = null;       // need access for JUnit test
@@ -71,25 +74,25 @@ public class WarrantFrame extends WarrantRoute {
 
     JTextField _sysNameBox;
     JTextField _userNameBox;
-    JButton _calculateButton;
     JButton _stopButton;
-    JButton _startButton;
 
     JTabbedPane _tabbedPane;
     JPanel _routePanel;
     JPanel _commandPanel;
     JRadioButton _isSCWarrant = new JRadioButton(Bundle.getMessage("SmallLayoutTrainAutomater"), false);
     JRadioButton _isWarrant = new JRadioButton(Bundle.getMessage("NormalWarrant"), true);
+    JRadioButton _addSpeeds = new JRadioButton(Bundle.getMessage("AddTrackSpeeds"), false);
     JCheckBox    _runForward = new JCheckBox(Bundle.getMessage("Forward"));
     JFormattedTextField _TTPtextField = new JFormattedTextField();
     JCheckBox    _noRampBox = new JCheckBox();
+    JCheckBox    _shareRouteBox = new JCheckBox();
     JCheckBox    _runETOnlyBox = new JCheckBox();
     JRadioButton _eStop = new JRadioButton(Bundle.getMessage("EStop"), false);
     JRadioButton _halt = new JRadioButton(Bundle.getMessage("Halt"), false);
     JRadioButton _resume = new JRadioButton(Bundle.getMessage("Resume"), false);
     JRadioButton _abort = new JRadioButton(Bundle.getMessage("Abort"), false);
     JRadioButton _invisible = new JRadioButton();
-    JTextField _statusBox = new JTextField(90);
+    JTextField   _statusBox = new JTextField(90);
 
     JTextField _searchStatus = new JTextField();
 
@@ -102,7 +105,7 @@ public class WarrantFrame extends WarrantRoute {
         // temp unregistered version until editing is saved.
         _warrant = new Warrant(_saveWarrant.getSystemName(), _saveWarrant.getUserName());
         setup(_saveWarrant);
-        WarrantTableAction.newWarrantFrame(this);
+        WarrantTableAction.setWarrantFrame(this);
         init();
         if (routeIsValid() != null) {
             findRoute();
@@ -133,34 +136,35 @@ public class WarrantFrame extends WarrantRoute {
         _destination.setOrder(warrant.getLastOrder());
         _via.setOrder(warrant.getViaOrder());
         _avoid.setOrder(warrant.getAvoidOrder());
-        _TTP = 0;
-        if (warrant instanceof SCWarrant) {
-            _TTP = ((SCWarrant)warrant).getTimeToPlatform();
-        }
         List<BlockOrder> list = warrant.getBlockOrders();
         ArrayList<BlockOrder> orders = new ArrayList<BlockOrder>(list.size());
         for (int i = 0; i < list.size(); i++) {
             orders.add(new BlockOrder(list.get(i)));
         }
-        setOrders(orders);      // makes copy
+        setOrders(orders);
 
-        _forward = true;
         List<ThrottleSetting> tList = warrant.getThrottleCommands();
+        if (warrant instanceof SCWarrant) {
+            _TTP = ((SCWarrant)warrant).getTimeToPlatform();
+            _forward = ((SCWarrant)warrant).getForward();
+        }
         for (int i = 0; i < tList.size(); i++) {
             ThrottleSetting ts = new ThrottleSetting(tList.get(i));
-            if (ts.getCommand().toUpperCase().equals("FORWARD")) {
-                _forward = ts.getValue().toUpperCase().equals("TRUE");
-            }
             _throttleCommands.add(ts);
         }
+       _shareRouteBox.setSelected(warrant.getShareRoute());
+        _warrant.setShareRoute(warrant.getShareRoute());
         _noRampBox.setSelected(warrant.getNoRamp());
         _warrant.setNoRamp(warrant.getNoRamp());
         _runETOnlyBox.setSelected(warrant.getRunBlind());
         _warrant.setRunBlind(warrant.getRunBlind());
         setTrainName(warrant.getTrainName());
-        setTrainInfo(warrant.getTrainId());
         _warrant.setTrainName(warrant.getTrainName());
-//        _warrant.setTrainId(warrant.getTrainId());
+        
+        SpeedUtil spU = warrant.getSpeedUtil();
+        String trainId = spU.getRosterId();
+        setTrainInfo(trainId);
+        _warrant.getSpeedUtil().setDccAddress(trainId);
     }
 
     private void init() {
@@ -177,7 +181,8 @@ public class WarrantFrame extends WarrantRoute {
         contentPane.add(_tabbedPane, BorderLayout.CENTER);
 
         contentPane.add(makeEditableButtonPanel(), BorderLayout.SOUTH);
-        if (getOrders().size() > 0) {
+        List<BlockOrder> orders = getOrders();
+        if (orders != null && orders.size() > 1) {
             _tabbedPane.setSelectedIndex(1);
         }
         addWindowListener(new java.awt.event.WindowAdapter() {
@@ -229,7 +234,7 @@ public class WarrantFrame extends WarrantRoute {
         JPanel topLeft = new JPanel();
         topLeft.setLayout(new BoxLayout(topLeft, BoxLayout.PAGE_AXIS));
 
-        topLeft.add(makeBlockPanels());
+        topLeft.add(makeBlockPanels(false));
 
         topLeft.add(Box.createVerticalStrut(2 * STRUT_SIZE));
         tab1.add(topLeft);
@@ -241,25 +246,7 @@ public class WarrantFrame extends WarrantRoute {
         JPanel panel = new JPanel();
         panel.setLayout(new BoxLayout(panel, BoxLayout.PAGE_AXIS));
         panel.add(Box.createVerticalStrut(2 * STRUT_SIZE));
-        _calculateButton = new JButton(Bundle.getMessage("Calculate"));
-        _calculateButton.setMaximumSize(_calculateButton.getPreferredSize());
-        _calculateButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                calculate();
-            }
-        });
-        JPanel p = new JPanel();
-        p.setLayout(new BoxLayout(p, BoxLayout.PAGE_AXIS));
-        JPanel pp = new JPanel();
-        pp.setLayout(new FlowLayout(FlowLayout.CENTER));
-        pp.add(new JLabel(Bundle.getMessage("CalculateRoute")));
-        p.add(pp);
-        pp = new JPanel();
-        pp.setLayout(new FlowLayout(FlowLayout.CENTER));
-        pp.add(_calculateButton);
-        p.add(pp);
-        panel.add(p);
+        panel.add(calculatePanel(true));
         panel.add(Box.createVerticalStrut(2 * STRUT_SIZE));
 
         _stopButton = new JButton(Bundle.getMessage("Stop"));
@@ -277,7 +264,7 @@ public class WarrantFrame extends WarrantRoute {
         }
         panel.add(searchDepthPanel(true));
 
-        p = new JPanel();
+        JPanel p = new JPanel();
         p.setLayout(new BoxLayout(p, BoxLayout.PAGE_AXIS));
         p.add(makeTextBoxPanel(true, _searchStatus, "SearchRoute", null));
         _searchStatus.setEditable(false);
@@ -287,7 +274,7 @@ public class WarrantFrame extends WarrantRoute {
         _searchStatus.setBackground(Color.white);
         _searchStatus.setEditable(false);
         p = new JPanel();
-        pp = new JPanel();
+        JPanel pp = new JPanel();
         pp.setLayout(new FlowLayout(FlowLayout.CENTER));
         pp.add(_stopButton);
         p.add(pp, BorderLayout.SOUTH);
@@ -299,22 +286,13 @@ public class WarrantFrame extends WarrantRoute {
         topRight.add(panel);
         topRight.add(Box.createHorizontalStrut(STRUT_SIZE));
 
-        PickListModel pickListModel = PickListModel.oBlockPickModelInstance();
+        PickListModel<OBlock> pickListModel = PickListModel.oBlockPickModelInstance();
         topRight.add(new JScrollPane(pickListModel.makePickTable()));
         Dimension dim = topRight.getPreferredSize();
         topRight.setMinimumSize(dim);
         tab1.add(topRight);
         tab1.add(Box.createHorizontalStrut(STRUT_SIZE));
         return tab1;
-    }
-
-    private void calculate() {
-        clearCommands();
-        String msg = findRoute();
-        if (msg != null) {
-            JOptionPane.showMessageDialog(this, msg,
-                    Bundle.getMessage("WarningTitle"), JOptionPane.WARNING_MESSAGE);
-        }
     }
 
     private JPanel makeSetPowerTabPanel() {
@@ -328,21 +306,87 @@ public class WarrantFrame extends WarrantRoute {
         panel.add(Box.createHorizontalStrut(STRUT_SIZE));
         panel.add(makeBorderedTrainPanel());
         panel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        panel.add(makeTypePanel());
+        JPanel typePanel = makeTypePanel();
+        JPanel edge = new JPanel();
+        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
+                Bundle.getMessage("SelectType"),
+                javax.swing.border.TitledBorder.CENTER,
+                javax.swing.border.TitledBorder.TOP));
+        edge.add(typePanel);
+        panel.add(edge);
         panel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        panel.add(makeSCParamPanel());
+        
+        JPanel scParamPanel = makeSCParamPanel();
+        edge = new JPanel();
+        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
+                Bundle.getMessage("SetSCParameters"),
+                javax.swing.border.TitledBorder.CENTER,
+                javax.swing.border.TitledBorder.TOP));
+        edge.add(scParamPanel);
+        panel.add(edge);
         panel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        panel.add(makeRecordPanel());
+        
+        JPanel learnPanel = makeRecordPanel();
+        edge = new JPanel();
+        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
+                Bundle.getMessage("LearnMode"),
+                javax.swing.border.TitledBorder.CENTER,
+                javax.swing.border.TitledBorder.TOP));
+        edge.add(learnPanel);
+        panel.add(edge);
         panel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        panel.add(makeRunParmsPanel());
+        
+        JPanel paramsPanel = makeRunParmsPanel();
+        edge = new JPanel();
+        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
+                Bundle.getMessage("RunParameters"),
+                javax.swing.border.TitledBorder.CENTER,
+                javax.swing.border.TitledBorder.TOP));
+        edge.add(paramsPanel);
+        panel.add(edge);
         panel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        panel.add(makePlaybackPanel());
+        
+        JPanel runPanel = makePlaybackPanel();
+        edge = new JPanel();
+        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
+                Bundle.getMessage("RunTrain"),
+                javax.swing.border.TitledBorder.CENTER,
+                javax.swing.border.TitledBorder.TOP));
+        edge.add(runPanel);
+        panel.add(edge);
         panel.add(Box.createHorizontalStrut(STRUT_SIZE));
         tab2.add(panel);
- 
+        
+        _isSCWarrant.addActionListener(new ActionListener() {
+            public void actionPerformed(ActionEvent e) {
+                setPanelEnabled(scParamPanel,true);
+                setPanelEnabled(learnPanel,false);
+                setPanelEnabled(paramsPanel,false);
+                setPanelEnabled(runPanel,false);
+                _addSpeeds.setEnabled(false);
+            }
+        });
+        if (_saveWarrant instanceof SCWarrant) {
+            setPanelEnabled(scParamPanel,true);
+            setPanelEnabled(learnPanel,false);
+            setPanelEnabled(paramsPanel,false);
+            setPanelEnabled(runPanel,false);
+            _addSpeeds.setEnabled(false);
+            _isSCWarrant.setSelected(true);
+        }
+
+        _isWarrant.addActionListener(new ActionListener() {
+            public void actionPerformed(ActionEvent e) {
+                setPanelEnabled(scParamPanel,false);
+                setPanelEnabled(learnPanel,true);
+                setPanelEnabled(paramsPanel,true);
+                setPanelEnabled(runPanel,true);
+                _addSpeeds.setEnabled(_throttleCommands.size() > 1);
+            }
+        });
+
         panel = new JPanel();
         String status = getIdleMessage();
-
         panel.add(makeTextBoxPanel(false, _statusBox, "Status", null));
         _statusBox.setEditable(false);
         _statusBox.setMinimumSize(new Dimension(300, _statusBox.getPreferredSize().height));
@@ -356,8 +400,8 @@ public class WarrantFrame extends WarrantRoute {
     private String  getIdleMessage() {
         switch (_warrant.getRunMode()) {
             case Warrant.MODE_NONE:
-                if (getOrders().size() == 0) {
-                    return Bundle.getMessage("BlankWarrant");
+                if (getOrders()==null || getOrders().size() == 0) {
+                    return Bundle.getMessage("noBlockOrders");
                 } else if (getAddress() == null || getAddress().length() == 0) {
                     return Bundle.getMessage("NoLoco");
                 }
@@ -367,7 +411,10 @@ public class WarrantFrame extends WarrantRoute {
             case Warrant.MODE_RUN:
             case Warrant.MODE_MANUAL:
                 return _warrant.getRunningMessage();
-        }        
+            default:
+                // fall through
+                break;
+        }
         return Bundle.getMessage("Idle");
     }
 
@@ -377,14 +424,14 @@ public class WarrantFrame extends WarrantRoute {
         Component[] components = panel.getComponents();
 
         for(int i = 0; i < components.length; i++) {
-            if(components[i].getClass().getName() == "javax.swing.JPanel") {
+            if("javax.swing.JPanel".equals(components[i].getClass().getName()))  {
                 setPanelEnabled((JPanel) components[i], isEnabled);
             }
 
             components[i].setEnabled(isEnabled);
         }
     }
-    
+
     private JPanel makeBorderedTrainPanel() {
         JPanel trainPanel = makeTrainIdPanel(null);
 
@@ -401,7 +448,7 @@ public class WarrantFrame extends WarrantRoute {
         JPanel typePanel = new JPanel();
         typePanel.setLayout(new BoxLayout(typePanel, BoxLayout.LINE_AXIS));
         typePanel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        
+
         JPanel wTypePanel = new JPanel();
         wTypePanel.setLayout(new BoxLayout(wTypePanel, BoxLayout.PAGE_AXIS));
         wTypePanel.add(Box.createVerticalStrut(STRUT_SIZE));
@@ -412,30 +459,49 @@ public class WarrantFrame extends WarrantRoute {
         _isWarrant.setToolTipText(Bundle.getMessage("W_Tooltip"));
         wTypePanel.add(_isSCWarrant);
         wTypePanel.add(_isWarrant);
+        wTypePanel.add(_addSpeeds);
         typePanel.add(wTypePanel);
-        _isSCWarrant.setSelected(_saveWarrant instanceof SCWarrant);
-                
-        JPanel edge = new JPanel();
-        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
-                Bundle.getMessage("SelectType"),
-                javax.swing.border.TitledBorder.CENTER,
-                javax.swing.border.TitledBorder.TOP));
-        edge.add(typePanel);
-        return edge;
+
+        _addSpeeds.addActionListener((ActionEvent evt)-> {
+            addSpeeds();
+        });
+
+        return typePanel;
     }
     
+    private void addSpeeds() {
+        setAddress();
+        RosterSpeedProfile speedProfile =  _speedUtil.getMergeProfile();         
+        boolean isForward = true;
+        for (ThrottleSetting ts :_throttleCommands) {
+            if ("FORWARD".equalsIgnoreCase(ts.getCommand())) {
+                isForward = Boolean.parseBoolean(ts.getValue());
+            }
+            if ("SPEED".equalsIgnoreCase(ts.getCommand())) {
+                try {
+                    ts.setSpeed(speedProfile.getSpeed(Float.parseFloat(ts.getValue()), isForward) / 1000);                    
+                } catch (NumberFormatException nfe) {
+                    log.error("Command failed! {} {}", ts.toString(), nfe.toString());
+                }
+            }
+        }
+        _commandModel.fireTableDataChanged();
+        showCommands(true);
+        _addSpeeds.setSelected(false);
+    }
+
     private JPanel makeSCParamPanel() {
         JPanel scParamPanel = new JPanel();
         scParamPanel.setLayout(new BoxLayout(scParamPanel, BoxLayout.PAGE_AXIS));
         scParamPanel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        
+
         scParamPanel.add(_runForward);
         _runForward.setSelected(_forward);
-        
+
         JPanel panel = new JPanel();
         panel.setLayout(new BoxLayout(panel, BoxLayout.LINE_AXIS));
         JLabel l = new JLabel(Bundle.getMessage(Bundle.getMessage("TTP")));
-        _TTPtextField.setValue(new Long(_TTP));
+        _TTPtextField.setValue(Long.valueOf(_TTP));
         _TTPtextField.setColumns(6);
         l.setAlignmentX(JComponent.LEFT_ALIGNMENT);
         _TTPtextField.setAlignmentX(JComponent.RIGHT_ALIGNMENT);
@@ -448,33 +514,15 @@ public class WarrantFrame extends WarrantRoute {
         if (_isWarrant.isSelected()) {
             setPanelEnabled(scParamPanel,false);
         }
-        
-        _isSCWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(scParamPanel,true);
-            }
-        });
-        _isWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(scParamPanel,false);
-            }
-        });
-        
-        JPanel edge = new JPanel();
-        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
-                Bundle.getMessage("SetSCParameters"),
-                javax.swing.border.TitledBorder.CENTER,
-                javax.swing.border.TitledBorder.TOP));
-        edge.add(scParamPanel);
-        return edge;
+        return scParamPanel;
     }
-    
+
     private JPanel makeRecordPanel() {
         JPanel learnPanel = new JPanel();
         learnPanel.setLayout(new BoxLayout(learnPanel, BoxLayout.LINE_AXIS));
         learnPanel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        
-                
+
+
         JPanel startStopPanel = new JPanel();
         startStopPanel.setLayout(new BoxLayout(startStopPanel, BoxLayout.PAGE_AXIS));
         startStopPanel.add(Box.createVerticalStrut(STRUT_SIZE));
@@ -500,66 +548,24 @@ public class WarrantFrame extends WarrantRoute {
         startStopPanel.add(stopButton);
         startStopPanel.add(Box.createRigidArea(new Dimension(30 + stopButton.getPreferredSize().width, 10)));
         learnPanel.add(startStopPanel);
-        
-        if (_isSCWarrant.isSelected()) {
-            setPanelEnabled(learnPanel,false);
-        }
-        
-        _isSCWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(learnPanel,false);
-            }
-        });
-        _isWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(learnPanel,true);
-            }
-        });
 
-        JPanel edge = new JPanel();
-        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
-                Bundle.getMessage("LearnMode"),
-                javax.swing.border.TitledBorder.CENTER,
-                javax.swing.border.TitledBorder.TOP));
-        edge.add(learnPanel);
-        return edge;
+        return learnPanel;
     }
-    
+
     private JPanel makeRunParmsPanel() {
         JPanel paramsPanel = new JPanel();
         paramsPanel.setLayout(new BoxLayout(paramsPanel, BoxLayout.LINE_AXIS));
         paramsPanel.add(Box.createHorizontalStrut(STRUT_SIZE));
-        
+
         JPanel panel = new JPanel();
         panel.setLayout(new BoxLayout(panel, BoxLayout.PAGE_AXIS));
         panel.add(Box.createVerticalStrut(STRUT_SIZE));
+        panel.add(makeTextBoxPanel(_shareRouteBox, "ShareRoute", "ToolTipShareRoute"));
         panel.add(makeTextBoxPanel(_noRampBox, "NoRamping", "ToolTipNoRamping"));
         panel.add(makeTextBoxPanel(_runETOnlyBox, "RunETOnly", "ToolTipRunETOnly"));
-                
-        paramsPanel.add(panel);
-        
-        if (_isSCWarrant.isSelected()) {
-            setPanelEnabled(panel,false);
-        }
-        
-        _isSCWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(panel,false);
-            }
-        });
-        _isWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(panel,true);
-            }
-        });
 
-        JPanel edge = new JPanel();
-        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
-                Bundle.getMessage("RunParameters"),
-                javax.swing.border.TitledBorder.CENTER,
-                javax.swing.border.TitledBorder.TOP));
-        edge.add(paramsPanel);
-        return edge;
+        paramsPanel.add(panel);
+        return paramsPanel;
     }
 
     private JPanel makePlaybackPanel() {
@@ -590,6 +596,7 @@ public class WarrantFrame extends WarrantRoute {
         group.add(_halt);
         group.add(_resume);
         group.add(_eStop);
+        group.add(_abort);
         group.add(_invisible);
         panel.add(_halt);
         panel.add(_resume);
@@ -622,32 +629,7 @@ public class WarrantFrame extends WarrantRoute {
             }
         });
         runPanel.add(panel);
-
-        if (_isSCWarrant.isSelected()) {
-            setPanelEnabled(panel,false);
-            setPanelEnabled(bPanel,false);
-        }
-        
-        _isSCWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(runPanel,false);
-                setPanelEnabled(bPanel,false);
-            }
-        });
-        _isWarrant.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                setPanelEnabled(runPanel,true);
-                setPanelEnabled(bPanel,true);
-            }
-        });
-
-        JPanel edge = new JPanel();
-        edge.setBorder(BorderFactory.createTitledBorder(BorderFactory.createLineBorder(java.awt.Color.BLACK),
-                Bundle.getMessage("RunTrain"),
-                javax.swing.border.TitledBorder.CENTER,
-                javax.swing.border.TitledBorder.TOP));
-        edge.add(runPanel);
-        return edge;
+        return runPanel;
     }
 
     private JPanel makeTabMidPanel() {
@@ -723,9 +705,9 @@ public class WarrantFrame extends WarrantRoute {
             _commandTable.getColumnModel().getColumn(i).setPreferredWidth(width);
         }
         _throttlePane = new JScrollPane(_commandTable);
-        ROW_HEIGHT = _commandTable.getRowHeight();
+        _rowHeight = _commandTable.getRowHeight();
         Dimension dim = _commandTable.getPreferredSize();
-        dim.height = ROW_HEIGHT * 8;
+        dim.height = _rowHeight * 8;
         _throttlePane.getViewport().setPreferredSize(dim);
 
         JPanel buttonPanel = new JPanel();
@@ -818,7 +800,7 @@ public class WarrantFrame extends WarrantRoute {
             @Override
             public void actionPerformed(ActionEvent e) {
                 if (save()) {
-                    close();                   
+                    close();
                 }
             }
         });
@@ -861,7 +843,7 @@ public class WarrantFrame extends WarrantRoute {
 
     private void doControlCommand(int cmd) {
         if (log.isDebugEnabled()) {
-            log.debug("actionPerformed on doControlCommand  cmd= " + cmd);
+            log.debug("actionPerformed on doControlCommand  cmd= {}", cmd);
         }
         int runMode = _warrant.getRunMode();
         if (runMode == Warrant.MODE_NONE) {
@@ -896,6 +878,7 @@ public class WarrantFrame extends WarrantRoute {
 
     @Override
     public void selectedRoute(ArrayList<BlockOrder> orders) {
+        clearCommands();
         _tabbedPane.setSelectedIndex(1);
     }
 
@@ -904,13 +887,14 @@ public class WarrantFrame extends WarrantRoute {
      *
      */
     private String checkTrainId() {
+        setAddress();
         String msg = null;
         if (_warrant.getRunMode() != Warrant.MODE_NONE) {
             msg = _warrant.getRunModeMessage();
             return msg;
         }
         List<BlockOrder> orders = getOrders();
-        if (orders.size() == 0) {
+        if (orders==null || orders.size() < 2) {
             msg = Bundle.getMessage("NoRouteSet", _origin.getBlockName(), _destination.getBlockName());
             return msg;
         }
@@ -931,7 +915,7 @@ public class WarrantFrame extends WarrantRoute {
             setStatusText(msg, Color.red);
             return;
         }
-        
+
         msg = _warrant.checkRoute();
         if (msg!=null) {
             JOptionPane.showMessageDialog(this, Bundle.getMessage("LearnError", msg),
@@ -939,7 +923,7 @@ public class WarrantFrame extends WarrantRoute {
             setStatusText(msg, Color.black);
             return;
         }
-        
+
         if (_throttleCommands.size() > 0) {
             if (JOptionPane.showConfirmDialog(this, Bundle.getMessage("deleteCommand"),
                     Bundle.getMessage("QuestionTitle"), JOptionPane.YES_NO_OPTION,
@@ -959,7 +943,7 @@ public class WarrantFrame extends WarrantRoute {
                 setStatusText(msg, Color.red);
                 return;
             } else if (msg.equals("BlockDark")) {
-                msg = Bundle.getMessage("BlockDark", _warrant.getCurrentBlockName(), getTrainName());                            
+                msg = Bundle.getMessage("BlockDark", _warrant.getCurrentBlockName(), getTrainName());
                 if (JOptionPane.NO_OPTION == JOptionPane.showConfirmDialog(this,
                         Bundle.getMessage("OkToRun", msg), Bundle.getMessage("QuestionTitle"),
                         JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE)) {
@@ -978,9 +962,12 @@ public class WarrantFrame extends WarrantRoute {
 
         _warrant.setTrainName(getTrainName());
         _startTime = System.currentTimeMillis();
-        _warrant.addPropertyChangeListener(this);
+        _speed = 0.0f;
         
-        msg = _warrant.setRunMode(Warrant.MODE_LEARN, getLocoAddress(), _learnThrottle,
+//        _warrant.getSpeedUtil().getValidSpeedProfile(this);
+        _warrant.addPropertyChangeListener(this);
+
+        msg = _warrant.setRunMode(Warrant.MODE_LEARN, _speedUtil.getDccAddress(), _learnThrottle,
                 _throttleCommands, _runETOnlyBox.isSelected());
         if (msg != null) {
             stopRunTrain();
@@ -993,7 +980,7 @@ public class WarrantFrame extends WarrantRoute {
     private void runTrain() {
         String msg = checkTrainId();
         if (msg == null) {
-            if (_throttleCommands == null || _throttleCommands.size() == 0) {
+            if (_throttleCommands.size() <= getOrders().size()) {
                 msg = Bundle.getMessage("NoCommands", _warrant.getDisplayName());
             }
         }
@@ -1004,6 +991,7 @@ public class WarrantFrame extends WarrantRoute {
             return;
         }
         _warrant.setTrainName(getTrainName());
+        _warrant.setShareRoute(_shareRouteBox.isSelected());
         _warrant.setNoRamp(_noRampBox.isSelected());
         if (!_warrant.hasRouteSet() && _runETOnlyBox.isSelected()) {
             msg = Bundle.getMessage("BlindRouteNotSet", _warrant.getDisplayName());
@@ -1012,8 +1000,17 @@ public class WarrantFrame extends WarrantRoute {
             setStatusText(msg, Color.black);
             return;
         }
+/*        if (_warrant.commandsHaveTrackSpeeds()) {
+            _warrant.getSpeedUtil().getValidSpeedProfile(this);            
+        } else {
+            setStatusText(Bundle.getMessage("NoTrackSpeeds", _warrant.getDisplayName()), Color.red);
+        }*/
         _warrant.addPropertyChangeListener(this);
-        msg = _warrant.setRunMode(Warrant.MODE_RUN, getLocoAddress(), null,
+        if (_saveWarrant!=null) {
+            _saveWarrant.addPropertyChangeListener(WarrantTableFrame.getDefault().getModel());            
+        }
+        
+        msg = _warrant.setRunMode(Warrant.MODE_RUN, _speedUtil.getDccAddress(), null,
                 _throttleCommands, _runETOnlyBox.isSelected());
         if (msg != null) {
             stopRunTrain();
@@ -1027,7 +1024,7 @@ public class WarrantFrame extends WarrantRoute {
             if (msg.equals("warnStart")) {
                 msg = Bundle.getMessage("warnStart", _warrant.getTrainName(), _warrant.getCurrentBlockName());
             } else if (msg.equals("BlockDark")) {
-                msg = Bundle.getMessage("BlockDark", _warrant.getCurrentBlockName(), _warrant.getTrainName());                            
+                msg = Bundle.getMessage("BlockDark", _warrant.getCurrentBlockName(), _warrant.getTrainName());
             }
             if (JOptionPane.NO_OPTION == JOptionPane.showConfirmDialog(this,
                     Bundle.getMessage("OkToRun", msg), Bundle.getMessage("QuestionTitle"),
@@ -1042,19 +1039,17 @@ public class WarrantFrame extends WarrantRoute {
     }
 
     protected void stopRunTrain() {
-        List<BlockOrder> orders = getOrders();
+        if (_saveWarrant != null && _saveWarrant.getRunMode() != Warrant.MODE_NONE) {
+          return;
+        }
         if (_learnThrottle != null) {
-            // if last block is dark and previous block has not been exited, we must assume train
-            // has entered the last block now that the user is terminating the recording.
-            if (_learnThrottle.getSpeedSetting() > 0.0) {
-                _learnThrottle.setSpeedSetting(-0.5F);
-                _learnThrottle.setSpeedSetting(0.0F);
-            }
             _learnThrottle.dispose();
             _learnThrottle = null;
         }
-        if (_warrant != null) {
-            if (orders.size()>0) {
+
+        if (_warrant.getRunMode() == Warrant.MODE_LEARN) {
+            List<BlockOrder> orders = getOrders();
+            if (orders!=null && orders.size()>1) {
                 BlockOrder bo = _warrant.getCurrentBlockOrder();
                 if (bo!=null) {
                     OBlock lastBlock = orders.get(orders.size() - 1).getBlock();
@@ -1070,18 +1065,18 @@ public class WarrantFrame extends WarrantRoute {
                                     JOptionPane.WARNING_MESSAGE);
                         }
                     } else {
-                        setStatusText(Bundle.getMessage("LearningStop"), myGreen);                
-                    }                                    
+                        setStatusText(Bundle.getMessage("LearningStop"), myGreen);
+                    }
                 }
             }
-            clearWarrant();
-        }        
+        }
+        clearWarrant();
     }
     private void clearWarrant() {
         if (_warrant != null) {
             _warrant.stopWarrant(false);
             _warrant.removePropertyChangeListener(this);
-        }        
+        }
     }
 
     protected Warrant getWarrant() {
@@ -1092,7 +1087,7 @@ public class WarrantFrame extends WarrantRoute {
         _statusBox.setForeground(c);
         _statusBox.setText(msg);
     }
-    
+
     /**
      * Property names from Warrant: "runMode" - from setRunMode "controlChange"
      * - from controlRunTrain "blockChange" - from goingActive "allocate" - from
@@ -1104,9 +1099,9 @@ public class WarrantFrame extends WarrantRoute {
     @Override
     public void propertyChange(java.beans.PropertyChangeEvent e) {
         String property = e.getPropertyName();
-        if (log.isDebugEnabled()) log.debug("propertyChange \""+property+
-                                            "\" old= "+e.getOldValue()+" new= "+e.getNewValue()+
-                                            " source= "+e.getSource().getClass().getName());
+        if (log.isDebugEnabled())
+            log.debug("propertyChange \"{}\" old= {} new= {} source= {}",
+                    property, e.getOldValue(), e.getNewValue(), e.getSource().getClass().getName());
         if (property.equals("DnDrop")) {
             doAction(e.getSource());
         } else if (e.getSource() instanceof Warrant && _warrant.equals(e.getSource())) {
@@ -1119,7 +1114,7 @@ public class WarrantFrame extends WarrantRoute {
                     if (newMode==Warrant.MODE_ABORT) {
                         msg =Bundle.getMessage("warrantAbort",
                                 _warrant.getTrainName(),
-                                _warrant.getDisplayName());                        
+                                _warrant.getDisplayName());
                     } else {
                         int oldMode = ((Integer) e.getOldValue()).intValue();
                         if (oldMode != Warrant.MODE_NONE) {
@@ -1127,13 +1122,13 @@ public class WarrantFrame extends WarrantRoute {
                             OBlock lastBlock = _warrant.getLastOrder().getBlock();
                             if (lastBlock.equals(curBlock)) {
                                 msg = Bundle.getMessage("warrantComplete",
-                                        _warrant.getTrainName(), _warrant.getDisplayName(), 
+                                        _warrant.getTrainName(), _warrant.getDisplayName(),
                                         lastBlock.getDisplayName());
-                                color = Color.green;                                
+                                color = Color.green;
                             } else {
                                 msg = Bundle.getMessage("warrantEnd",
-                                        _warrant.getTrainName(), _warrant.getDisplayName(), 
-                                        lastBlock.getDisplayName());                        
+                                        _warrant.getTrainName(), _warrant.getDisplayName(),
+                                        lastBlock.getDisplayName());
                                 color = Color.red;
                             }
                         }
@@ -1164,16 +1159,16 @@ public class WarrantFrame extends WarrantRoute {
                             msg = Bundle.getMessage("LearnAbortOccupied",
                                             _warrant.getBlockAt(oldIdx),
                                             _warrant.getDisplayName());
-                            color = Color.red;                          
+                            color = Color.red;
                         } else {
                             msg = Bundle.getMessage("warrantAbort",
                                             _warrant.getTrainName(),
                                             _warrant.getDisplayName());
-                            color = Color.red;                            
+                            color = Color.red;
                         }
                     } else {
                         msg = Bundle.getMessage("Learning", _warrant.getCurrentBlockName());
-                        color = Color.black;                        
+                        color = Color.black;
                     }
                     break;
                 case Warrant.MODE_RUN:
@@ -1204,7 +1199,7 @@ public class WarrantFrame extends WarrantRoute {
                         msg = _warrant.getRunningMessage();
                         color = Color.black;
                     } else if (e.getPropertyName().equals("SpeedRestriction")) {
-                        msg = Bundle.getMessage("speedChange", _warrant.getTrainName(), 
+                        msg = Bundle.getMessage("speedChange", _warrant.getTrainName(),
                                 _warrant.getCurrentBlockName(), e.getNewValue());
                         color = Color.black;
                     } else if (e.getPropertyName().equals("runMode")) {
@@ -1218,8 +1213,8 @@ public class WarrantFrame extends WarrantRoute {
                                         Bundle.getMessage(Warrant.MODES[newMode]));
                                 if (_warrant.getState()==Warrant.HALT) {
                                     JOptionPane.showMessageDialog(this, _warrant.getRunningMessage(),
-                                        Bundle.getMessage("WarningTitle"), JOptionPane.WARNING_MESSAGE);                                    
-                                }                                
+                                        Bundle.getMessage("WarningTitle"), JOptionPane.WARNING_MESSAGE);
+                                }
                             }
                         }
                     } else if (e.getPropertyName().equals("controlChange")) {
@@ -1242,6 +1237,7 @@ public class WarrantFrame extends WarrantRoute {
                         color = Color.red;
                     }
                     break;
+                default:
             }
             setStatusText(msg, color);
         }
@@ -1259,12 +1255,21 @@ public class WarrantFrame extends WarrantRoute {
         }
         setThrottleCommand(cmd, value, bName);
     }
+    
+    protected void setSpeedCommand(float speed, boolean isForward) {
+        if (_warrant.getSpeedUtil().profileHasSpeedInfo()) {
+            _speed = _warrant.getSpeedUtil().getTrackSpeed(speed, isForward);  // mm/ms            
+        } else {
+            _speed = 0.0f;
+        }
+        setThrottleCommand("speed", Float.toString(speed));
+    }
 
     private void setThrottleCommand(String cmd, String value, String bName) {
         long endTime = System.currentTimeMillis();
         long time = endTime - _startTime;
         _startTime = endTime;
-        _throttleCommands.add(new ThrottleSetting(time, cmd, value, bName));
+        _throttleCommands.add(new ThrottleSetting(time, cmd, value, bName, _speed));
         _commandModel.fireTableDataChanged();
 
         scrollCommandTable(_commandModel.getRowCount());
@@ -1272,44 +1277,16 @@ public class WarrantFrame extends WarrantRoute {
 
     private void scrollCommandTable(int row) {
         JScrollBar bar = _throttlePane.getVerticalScrollBar();
-        bar.setValue(row * ROW_HEIGHT);
+        bar.setValue(row * _rowHeight);
 //        bar.setValue(bar.getMaximum());
     }
 
-    private void setForward(boolean forward) {
-        String fwString;
-        if (forward) {
-            fwString = "true";
-        } else {
-            fwString = "false";
-        }
-        if (_throttleCommands.size() == 0) {
-            _throttleCommands.add(new ThrottleSetting(0, "Forward", fwString, ""));
-            log.debug("setForward adding to empty _throttleCommands");
-            return;
-        }
-        for (int i=0; i<_throttleCommands.size(); i++) {
-            ThrottleSetting ts = _throttleCommands.get(i);
-            log.info("setForward examining _throttleCommands "+i+" command: "+ts.getCommand()+" value: "+ts.getValue());
-            if (ts.getCommand().toUpperCase().equals("FORWARD")) {
-                log.debug("setForward modifying _throttleCommands "+i);
-                ts.setValue(fwString);
-                return;
-            }
-        }
-        log.debug("setForward inserting new command at beginning of list");
-        _throttleCommands.add(0, new ThrottleSetting(0, "Forward", fwString, ""));
-    }
-    
     private boolean save() {
-        if (_isSCWarrant.isSelected()) {
-            setForward(_runForward.isSelected());
-        }
-        if (_warrant.getRunMode()!=Warrant.MODE_NONE) {
+        if (_saveWarrant != null && _saveWarrant.getRunMode() != Warrant.MODE_NONE) {
             JOptionPane.showMessageDialog(null, Bundle.getMessage("CannotEdit", _warrant.getDisplayName()),
                     Bundle.getMessage("WarningTitle"),
                     JOptionPane.WARNING_MESSAGE);
-            return false;            
+            return false;
         }
         String msg = routeIsValid();
         if (msg!=null) {
@@ -1318,14 +1295,16 @@ public class WarrantFrame extends WarrantRoute {
             return false;
         }
         msg = checkLocoAddress();
-        if (msg==null) {
-            if (_throttleCommands.size()==0) {
+        if (msg==null && !_isSCWarrant.isSelected()) {
+            List<BlockOrder> orders = getOrders();  // valid orders
+            if (_throttleCommands.size() <= orders.size() ||
+                    !_throttleCommands.get(_throttleCommands.size()-1).getBeanDisplayName().equals(orders.get(orders.size()-1).getBlock().getDisplayName())) {
                 msg = Bundle.getMessage("NoCommands", _warrant.getDisplayName());
             } else {
                 for (int i=0; i<_throttleCommands.size(); i++) {
                     ThrottleSetting ts = _throttleCommands.get(i);
-                    if (ts.getValue()==null || ts.getCommand()==null || ts.getBlockName()==null) {
-                        JOptionPane.showMessageDialog(this, Bundle.getMessage("BadThrottleSetting", i+1)+" - "+ts.toString(),
+                    if (ts.getValue()==null || ts.getCommand()==null || ts.getNamedBeanHandle()==null) {
+                        JOptionPane.showMessageDialog(this, Bundle.getMessage("BadThrottleSetting", i+1, ts.toString()),
                                 Bundle.getMessage("WarningTitle"), JOptionPane.WARNING_MESSAGE);
                         return false;
                     }
@@ -1333,23 +1312,34 @@ public class WarrantFrame extends WarrantRoute {
             }
         }
         if (msg!=null) {
-            int result = JOptionPane.showConfirmDialog(this, msg+Bundle.getMessage("SaveQuestion"), Bundle.getMessage("QuestionTitle"), 
+            int result = JOptionPane.showConfirmDialog(this, msg+Bundle.getMessage("SaveQuestion"), Bundle.getMessage("QuestionTitle"),
                     JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE);
             if (result==JOptionPane.NO_OPTION) {
                 return false;
-            }       
+            }
         }
 
         if (_saveWarrant != null) {
             _warrant = _saveWarrant;
-            // _saveWarrant already registered, but might not be the correct class.
-            InstanceManager.getDefault(WarrantManager.class).deregister(_saveWarrant);
+            if ((_saveWarrant instanceof SCWarrant && !_isSCWarrant.isSelected()) ||
+                    (!(_saveWarrant instanceof SCWarrant) && _isSCWarrant.isSelected())) {
+                // _saveWarrant already registered, but is not the correct class.
+                InstanceManager.getDefault(WarrantManager.class).deregister(_saveWarrant);
+                _warrant = InstanceManager.getDefault(WarrantManager.class).createNewWarrant(
+                        _sysNameBox.getText(), _userNameBox.getText(), _isSCWarrant.isSelected(), (long)_TTPtextField.getValue());
+            }
+        } else {
+            _warrant = InstanceManager.getDefault(WarrantManager.class).createNewWarrant(
+                    _sysNameBox.getText(), _userNameBox.getText(), _isSCWarrant.isSelected(), (long)_TTPtextField.getValue());
         }
-        _warrant = InstanceManager.getDefault(WarrantManager.class).createNewWarrant(_sysNameBox.getText(), _userNameBox.getText(), _isSCWarrant.isSelected(), (long)_TTPtextField.getValue());
 
-        _warrant.setDccAddress(getTrainId());
+        if (_isSCWarrant.isSelected()) {
+            ((SCWarrant)_warrant).setForward(_runForward.isSelected());
+            ((SCWarrant)_warrant).setTimeToPlatform((long)_TTPtextField.getValue());
+        }
         _warrant.setTrainName(getTrainName());
         _warrant.setRunBlind(_runETOnlyBox.isSelected());
+        _warrant.setShareRoute(_shareRouteBox.isSelected());
         _warrant.setNoRamp(_noRampBox.isSelected());
         _warrant.setUserName(_userNameBox.getText());
 
@@ -1357,10 +1347,13 @@ public class WarrantFrame extends WarrantRoute {
         _warrant.setAvoidOrder(getAvoidBlockOrder());
         _warrant.setBlockOrders(getOrders());
         _warrant.setThrottleCommands(_throttleCommands);
-        
-        if (log.isDebugEnabled()) log.debug("warrant saved _train "+getTrainId()+", name= "+getTrainName());
+        _speedUtil.setOrders(getOrders());
+        _warrant.setSpeedUtil(_speedUtil);  // transfer SpeedUtil to warrant
+
+        if (log.isDebugEnabled()) log.debug("warrant {} saved _train {} name= {}",
+                _warrant.getDisplayName(), _speedUtil.getRosterId(), getTrainName());
         WarrantTableAction.updateWarrantMenu();
-        WarrantTableFrame.getInstance().getModel().fireTableDataChanged();
+        WarrantTableFrame.getDefault().getModel().fireTableDataChanged();
         return true;
     }
 
@@ -1377,9 +1370,9 @@ public class WarrantFrame extends WarrantRoute {
             f.initComponents();
             f.concatenate(_saveWarrant, null);
         } catch (Exception ex) {
-            log.error("error making CreateWarrantFrame", ex);
+            log.error("error making CreateWarrantFrame {}", ex);
         }
-        dispose();
+        WarrantTableAction.closeWarrantFrame(this);
     }
 
     private void close() {
@@ -1398,7 +1391,9 @@ public class WarrantFrame extends WarrantRoute {
         public static final int COMMAND_COLUMN = 2;
         public static final int VALUE_COLUMN = 3;
         public static final int BLOCK_COLUMN = 4;
-        public static final int NUMCOLS = 5;
+        public static final int SPEED_COLUMN = 5;
+        public static final int NUMCOLS = 6;
+        java.text.DecimalFormat threeDigit = new java.text.DecimalFormat("0.000");
 
         public ThrottleTableModel() {
             super();
@@ -1427,13 +1422,18 @@ public class WarrantFrame extends WarrantRoute {
                     return Bundle.getMessage("ValueCol");
                 case BLOCK_COLUMN:
                     return Bundle.getMessage("BlockCol");
+                case SPEED_COLUMN:
+                    return Bundle.getMessage("trackSpeed");
+                default:
+                    // fall through
+                    break;
             }
             return "";
         }
 
         @Override
         public boolean isCellEditable(int row, int col) {
-            if (row == ROW_NUM) {
+            if (row == ROW_NUM || row == SPEED_COLUMN) {
                 return false;
             }
             return true;
@@ -1456,6 +1456,11 @@ public class WarrantFrame extends WarrantRoute {
                     return new JTextField(8).getPreferredSize().width;
                 case BLOCK_COLUMN:
                     return new JTextField(40).getPreferredSize().width;
+                case SPEED_COLUMN:
+                    return new JTextField(10).getPreferredSize().width;
+                default:
+                    // fall through
+                    break;
             }
             return new JTextField(12).getPreferredSize().width;
         }
@@ -1464,7 +1469,8 @@ public class WarrantFrame extends WarrantRoute {
         public Object getValueAt(int row, int col) {
             // some error checking
             if (row >= _throttleCommands.size()) {
-                if (log.isDebugEnabled()) log.debug("row is greater than throttle command size");
+                if (log.isDebugEnabled()) log.debug("row {} is greater than throttle command size {}",
+                        row, _throttleCommands.size());
                 return "";
             }
             ThrottleSetting ts = _throttleCommands.get(row);
@@ -1485,7 +1491,12 @@ public class WarrantFrame extends WarrantRoute {
                     }
                     return ts.getValue();
                 case BLOCK_COLUMN:
-                    return ts.getBlockName();
+                    return ts.getBeanDisplayName();
+                case SPEED_COLUMN:
+                    return threeDigit.format(ts.getSpeed() * 1000);
+                default:
+                    // fall through
+                    break;
             }
             return "";
         }
@@ -1529,7 +1540,7 @@ public class WarrantFrame extends WarrantRoute {
                             } else {
                                 ts.setCommand(cmd);
                             }
-                        } catch (Exception e) {
+                        } catch (NumberFormatException e) {
                             msg = Bundle.getMessage("badFunctionNum");
                         }
                     } else if (cmd.startsWith("LOCKF")) {
@@ -1540,7 +1551,7 @@ public class WarrantFrame extends WarrantRoute {
                             } else {
                                 ts.setCommand(cmd);
                             }
-                        } catch (Exception e) {
+                        } catch (NumberFormatException nfe) {
                             msg = Bundle.getMessage("badLockFNum");
                         }
                     } else if ("NOOP".equals(cmd)) {
@@ -1578,7 +1589,7 @@ public class WarrantFrame extends WarrantRoute {
                                 break;
                             }
                             msg = Bundle.getMessage("throttlesetting", value);
-                        } catch (Exception e) {
+                        } catch (NumberFormatException nfe) {
                             msg = Bundle.getMessage("invalidNumber");
                         }
                         ts.setValue(null);
@@ -1597,39 +1608,39 @@ public class WarrantFrame extends WarrantRoute {
                                     msg = Bundle.getMessage("badStepMode");
                                     ts.setValue(null);
                             }
-                        } catch (Exception e) {
+                        } catch (NumberFormatException nfe) {
                             msg = Bundle.getMessage("invalidNumber");
                             ts.setValue(null);
                         }
                     } else if ("FORWARD".equalsIgnoreCase(cmd)) {
-                        try {
-                            if (Boolean.parseBoolean((String) value)) {
-                                ts.setValue("true");
+                            if (((String)value).length() < 4) {
+                                msg = Bundle.getMessage("invalidBoolean");
                             } else {
-                                ts.setValue("false");                                
+                                if (Boolean.parseBoolean((String) value)) {
+                                    ts.setValue("true");
+                                } else {
+                                    ts.setValue("false");
+                                }
                             }
-                       } catch (Exception e) {
-                            msg = Bundle.getMessage("invalidBoolean");
-                        }
                     } else if (cmd.startsWith("F")) {
-                        try {
-                            if (Boolean.parseBoolean((String) value)) {
-                                ts.setValue("true");
+                            if (((String)value).length() < 4) {
+                                msg = Bundle.getMessage("invalidBoolean");
                             } else {
-                                ts.setValue("false");                                
+                                if (Boolean.parseBoolean((String) value)) {
+                                    ts.setValue("true");
+                                } else {
+                                    ts.setValue("false");
+                                }
                             }
-                        } catch (Exception e) {
-                            msg = Bundle.getMessage("invalidBoolean");
-                        }
                     } else if (cmd.startsWith("LOCKF")) {
-                        try {
+                        if (((String)value).length() < 4) {
+                            msg = Bundle.getMessage("invalidBoolean");
+                        } else {
                             if (Boolean.parseBoolean((String) value)) {
                                 ts.setValue("true");
                             } else {
-                                ts.setValue("false");                                
+                                ts.setValue("false");
                             }
-                        } catch (Exception e) {
-                            msg = Bundle.getMessage("invalidBoolean");
                         }
                     } else if ("SET SENSOR".equals(cmd) || "WAIT SENSOR".equals(cmd)) {
                         String v = ((String) value).toUpperCase();
@@ -1648,10 +1659,10 @@ public class WarrantFrame extends WarrantRoute {
                         }
                         resetBlockColumn = false;
                     } else {
-                        ts.setValue(null);                        
+                        ts.setValue(null);
                     }
                     if (resetBlockColumn) {
-                        ts.setBlockName(getPreviousBlockName(row));
+                        ts.setNamedBeanHandle(getPreviousBlockHandle(row));
                     }
                     break;
                 case BLOCK_COLUMN:
@@ -1660,7 +1671,7 @@ public class WarrantFrame extends WarrantRoute {
                         try {
                             jmri.Sensor s = InstanceManager.sensorManagerInstance().getSensor((String) value);
                             if (s != null) {
-                                ts.setBlockName((String) value);
+                                ts.setNamedBean(cmd, (String) value);
                             } else {
                                 msg = Bundle.getMessage("BadSensor", (String) value);
                             }
@@ -1673,7 +1684,7 @@ public class WarrantFrame extends WarrantRoute {
                         try {
                             Warrant w = InstanceManager.getDefault(WarrantManager.class).getWarrant((String) value);
                             if (w != null) {
-                                ts.setBlockName((String) value);
+                                ts.setNamedBean(cmd, (String) value);
                             } else {
                                 msg = Bundle.getMessage("BadWarrant", (String) value);
                             }
@@ -1681,13 +1692,17 @@ public class WarrantFrame extends WarrantRoute {
                             msg = Bundle.getMessage("BadWarrant", value, cmd) + ex;
                         }
                     } else {
-                        String name = getPreviousBlockName(row);
-                        if (!name.equals(value)) {
-                            msg = Bundle.getMessage("commandInBlock", name);
-                            ts.setBlockName(name);
+                        NamedBeanHandle<?> bh = getPreviousBlockHandle(row);
+                        if (bh != null) {
+                            String name = bh.getBean().getDisplayName();
+                            if (!name.equals(value)) {
+                                msg = Bundle.getMessage("commandInBlock", name);
+                                ts.setNamedBeanHandle(bh);
+                            }
                         }
                     }
                     break;
+                default:
             }
             if (msg != null) {
                 showWarning(msg);
@@ -1696,17 +1711,16 @@ public class WarrantFrame extends WarrantRoute {
             }
         }
 
-        private String getPreviousBlockName(int row) {
+        private NamedBeanHandle <? extends NamedBean> getPreviousBlockHandle(int row) {
             for (int i = row; i > 0; i--) {
-                String name = _throttleCommands.get(i - 1).getBlockName();
-                OBlock b = InstanceManager.getDefault(OBlockManager.class).getOBlock(name);
-                if (b != null) {
-                    return name;
+                NamedBeanHandle <? extends NamedBean> bh = _throttleCommands.get(i - 1).getNamedBeanHandle();
+                if (bh != null && (bh.getBean() instanceof OBlock)) {
+                    return bh;
                 }
             }
-            return "StartBlock";
+            return null;
         }
 
     }
-    private final static Logger log = LoggerFactory.getLogger(WarrantFrame.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(WarrantFrame.class);
 }
